# rtp-motion-estimation

./: .gitignore  CMakeLists.txt  README.md  ross.sh  test8x8.sh  testFile01.sh  testRtp01.sh  testRtp02.sh  testRtp03.sh  testRtp04-syntheticvideo.sh  testRtp05-webcam.sh  testRtp06-file.sh  testRtp07-Camera.sh  testRtp09-Camera.sh
demos/motion_estimation/: CMakeLists.txt  Makefile  config  config.h  cudaRGB.h  cudaYUV-NV12.cu  cudaYUV.cu  cudaYUV.h  debug.h  gstCamera.cpp  gstCamera.h  gstUtility.cpp  gstUtility.h  iterative_motion_estimator.cpp  main_motion_estimation.cpp  motion.geany  rtpStream.cpp  rtpStream.h
